# PAD

./: .gitignore  README.md  main.py  pyproject.toml
docs/: architecture.md  features_limitations.md  modules.md  workflow.md
src/analyzers/: __init__.py
src/analyzers/fft/: fft_analyzer.py  fft_features.py  fft_result.py  fft_score.py  fft_utils.py
src/analyzers/laplacian/: laplacian_analyzer.py  laplacian_result.py  laplacian_utils.py
src/analyzers/moire/: bandpass.py  color_artifacts.py  moire_detector.py  periodic.py  result.py  score.py  single_channel.py
src/analyzers/texture/: gabor.py  glcm.py  lbp.py  result.py  score.py  texture_analyzer.py
src/camera/: camera_cli.py  capture.py  live_detector.py  ui.py
src/cli/: analyze.py  cli.py  parser.py
src/config/: camera_config.py  cli_config.py  detector_config.py  fft_analyzer_config.py  gallery_config.py  laplacian_config.py  moire_config.py  texture_config.py
src/detector/: main_detector.py  result.py
src/gallery/: manager.py  viewer.py
